--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 
 <head>
-    <title>this is my test webpage</title>
+    <title>this is my real webpage</title>
 </head>
 
 <body>
-    <h1>
-        Hello World!
-    </h1>
+    <h1>Hello World!</h1>
     <p>Isn't it a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? Isn't it
+        a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? 
         a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? Isn't it a lovely day!?!? </p>
 </body>
 
